src/tests/snapshots/amber__tests__translation__mul_num_shorthand.ab.snap
---
source: src/tests/translation.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "5.5",
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    optimize_unused: true,
                    operator: "=",
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "echo ",
                                            },
                                        ),
                                        VarExpr(
                                            VarExprFragment {
                                                name: "x",
                                                global_id: Some(
                                                    0,
                                                ),
                                                kind: Num,
                                                is_ref: false,
                                                is_length: false,
                                                default_value: None,
                                                is_quoted: true,
                                                is_array_to_string: false,
                                                render_type: BashValue,
                                                index: None,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " '*' ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "4.2",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " | bc ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "-l",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " | sed '",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "/\\./ s/\\.\\{0,1\\}0\\{1,\\}$//",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "'",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "7.1",
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    optimize_unused: true,
                    operator: "=",
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "echo ",
                                            },
                                        ),
                                        VarExpr(
                                            VarExprFragment {
                                                name: "y",
                                                global_id: Some(
                                                    1,
                                                ),
                                                kind: Num,
                                                is_ref: false,
                                                is_length: false,
                                                default_value: None,
                                                is_quoted: true,
                                                is_array_to_string: false,
                                                render_type: BashValue,
                                                index: None,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " '*' ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "6.8",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " | bc ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "-l",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " | sed '",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "/\\./ s/\\.\\{0,1\\}0\\{1,\\}$//",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "'",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
